Make links to /docs/ point to / instead

--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,16 @@ layout: front
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="panel-journalist">
-      <div><a href="http://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner2.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
+      <div><a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner2.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
     </div>
     <div role="tabpanel" class="tab-pane" id="panel-instructor">
-        <div><a href="http://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner1.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
+        <div><a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner1.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
     </div>
     <div role="tabpanel" class="tab-pane" id="panel-student">
-      <div><a href="http://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner3.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
+      <div><a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner3.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
       </div>
     <div role="tabpanel" class="tab-pane" id="panel-research">
-      <div><a href="http://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner4.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
+      <div><a href="https://dash.harvard.edu/stories"><img src="{{site.baseurl}}/assets/img/banner4.png" alt="Read DASH User Stories" title="Read DASH User Stories" width="723" style="margin-bottom: 10px;"></a></div>
       </div>
   </div>
 </div>
