Make the big red button point to the quick submit form, instead of the dumb deposit page.

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@ layout: front
 
 <h2 class="h1">What is DASH?</h2>
 <p>A central, open-access repository of research by members of the Harvard community.</p>
-<p><a href="{{site.baseurl}}/deposit/"><img src="{{site.baseurl}}/assets/img/ButtonDeposit.png" alt="Deposit Your Work" title="Deposit Your Work" height="53" width="205"></a></p>
+<p><a href="https://osc.hul.harvard.edu/dash/quicksubmit/"><img src="{{site.baseurl}}/assets/img/ButtonDeposit.png" alt="Deposit Your Work" title="Deposit Your Work" height="53" width="205"></a></p>
 
 <h2 class="h1">Featured Works</h2>
 {% for post in site.posts limit:5 %}
